package edu.fiuba.algo3.modelo.cartasDesarrollo;

import edu.fiuba.algo3.modelo.jugador.Jugador;

public class Caballero extends Jugable {

    /*-- Constructor --*/

    public Caballero(Jugador propietario, int turnoObtenido) {
        super(propietario, turnoObtenido);
    }

    /*-- Metodo de  comportamiento --*/

    @Override
    protected void efecto() { /*TODO*/ }
}
